--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "fs-extra": "^8.1.0",
     "jsdom": "^16.5.0",
     "luxon": "^2.5.2",
-    "markdown-it": "^12.3.2",
-    "markdown-it-anchor": "^5.2.5",
+    "markdown-it": "^13.0.1",
+    "markdown-it-attrs": "^4.1.6",
     "node-fetch": "^2.6.7",
     "pre-commit": "^1.2.2",
     "pre-push": "^0.1.4",
@@ -59,6 +59,7 @@
     "html-minifier": "^4.0.0",
     "image-size": "^0.8.3",
     "lru-cache": "^5.1.1",
+    "markdown-it-anchor": "^5.2.5",
     "mocha": "^10.1.0",
     "phin": "^3.5.0",
     "purge-from-html": "^1.0.3",
